--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ week1/**/*.*.zip
 
 week5/**/*.mat
 
+week6/**/*.zip
+week6/6.2/aclimdb/
+
+finalExam/*.zip
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
